--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <section class="hero">
+            <div class="info">
+                <h1 class="info-title">Check the<br>best food</h1>
+                <p class="info-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut rem voluptates, quos omnis esse in voluptatibus est laudantium, at ducimus iure placeat exercitationem assumenda molestiae. Assumenda quidem nam cum earum.</p>
+                <button class="info-button">Book a table</button>
+            </div>
+            <img class="hero-image" src="./images/hero.png" alt="pasta-vegetales">
+        </section>
+        <section class="dishes">
+            <img class="dishes-item dishes-item__big" src="./images/video.png" alt="mesa con patos de pasta">
+            <img class="dishes-item src="./images/dish1.png" alt="">
+            <img class="dishes-item src="./images/dish2.png" alt="">
+            <img class="dishes-item src="./images/dish3.png" alt="">
+            <img class="dishes-item src="./images/dish4.png" alt="">
+        </section>
+    </main>
 </body>
 </html>
